# step4

./: .gitignore  .mise.toml  Cargo.toml  LICENSE  README.md  build.rs  vendor.toml  vendor.yml
.cargo/: config
src/: main.rs  step4.rs
src/ldscripts/: example_armv7a.ld
src/stand/armv7/: boot0.S
src/step4/: data_structures.rs  debug.rs  kernel.rs  system_calls.rs
src/support/: armv7a.S  device_tree.S
