[package]
name = "step4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
config_struct = { version = "0.5", features = ["yaml-parsing"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
