[package]
name = "step4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
serde = { version = "1.0", features = ["derive",] }
chrono = "0.4" 
toml = "0.8"

[profile.dev]
panic = "abort"
